Mejoras visuales + informacion e animaciones

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <div class="container">
         <div id="ui-header">
+            <img src="Logo_Cens.png" alt="CENS" id="header-logo">
             <div class="header-content">
                 <h1>Reporte de Logros y Retos - UGO</h1>
                 <p>Usa las <strong>flechas</strong> para moverte.</p>
@@ -19,6 +20,7 @@
         
         <div id="game-container">
             <canvas id="gameCanvas"></canvas>
+            <img id="player" src="image-removebg-preview.png" alt="Player">
             
             <!-- El Popup -->
             <div id="popup" class="hidden">
