Ultimo acto de compasion antes de mimir

--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Controles Táctiles -->
+            <div id="mobile-controls">
+                <div class="control-row">
+                    <button id="btn-up" class="control-btn">▲</button>
+                </div>
+                <div class="control-row">
+                    <button id="btn-left" class="control-btn">◀</button>
+                    <button id="btn-down" class="control-btn">▼</button>
+                    <button id="btn-right" class="control-btn">▶</button>
+                </div>
+            </div>
         </div>
     </div>
 
