--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="victory-content">
                     <div class="logos-container">
                         <img src="Logo_Cens.png" alt="CENS" class="victory-logo">
-                        <h2 class="victory-title">Gracias por el 2025 y vamos juntos por ese 2026</h2>
+                        <h2 class="victory-title">Gracias por el 2025 <BR></BR>Y vamos juntos por ese 2026</h2>
                         <img src="Logo_Censnova.png" alt="Censnnova" class="victory-logo">
                     </div>
                 </div>
